@@ -4,12 +4,15 @@ import com.medinet.api.dto.AppointmentDto;
 import com.medinet.api.dto.DoctorDto;
 import com.medinet.business.services.AppointmentService;
 import com.medinet.business.services.DoctorService;
+import com.medinet.infrastructure.entity.OpinionEntity;
 import com.medinet.infrastructure.repository.mapper.DoctorMapper;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
@@ -18,11 +21,10 @@ import org.springframework.ui.Model;
 import org.springframework.web.servlet.ModelAndView;
 
 import java.security.Principal;
+import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
-import java.util.Formatter;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
+import java.util.stream.Collectors;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.ArgumentMatchers.*;
@@ -57,14 +59,19 @@ class DoctorControllerTest {
         Authentication authentication = new UsernamePasswordAuthenticationToken(userEmail, "password");
         when(principal.getName()).thenReturn(userEmail);
         SecurityContextHolder.getContext().setAuthentication(authentication);
+
         DoctorDto doctorDto = new DoctorDto();
         doctorDto.setDoctorId(1);
+        doctorDto.setOpinions(Set.of());
         when(doctorService.findByEmail(userEmail)).thenReturn(doctorDto);
-        when(doctorService.findDoctorById(doctorDto.getDoctorId())).thenReturn(doctorDto);
 
+        DoctorDto doctorDtoClone = new DoctorDto();
+        doctorDtoClone.setDoctorId(doctorDto.getDoctorId());
+        doctorDtoClone.setOpinions(Set.of());
+        when(doctorService.findDoctorById(doctorDto.getDoctorId())).thenReturn(doctorDtoClone);
 
         List<AppointmentDto> completedAppointments = Arrays.asList(new AppointmentDto(), new AppointmentDto());
-        List<AppointmentDto> pendingAppointments = Arrays.asList(new AppointmentDto());
+        List<AppointmentDto> pendingAppointments = List.of(new AppointmentDto());
         List<AppointmentDto> upcomingAppointments = Arrays.asList(new AppointmentDto(), new AppointmentDto());
         when(appointmentService.findAllAppointmentsByStatusAndDoctorID("done", doctorDto.getDoctorId()))
                 .thenReturn(completedAppointments);
@@ -73,7 +80,7 @@ class DoctorControllerTest {
         when(appointmentService.findAllAppointmentsByStatusAndDoctorID("upcoming", doctorDto.getDoctorId()))
                 .thenReturn(upcomingAppointments);
 
-        // wehn
+        // when
         Map<String, ?> data = doctorController.prepareNecessaryDataForDoctor(principal);
 
         // then
@@ -82,6 +89,7 @@ class DoctorControllerTest {
         assertEquals(pendingAppointments, data.get("pendingAppointment"));
         assertEquals(upcomingAppointments, data.get("upcomingAppointment"));
     }
+
 
     @Test
     public void testDoctorMainPage() {
@@ -93,6 +101,7 @@ class DoctorControllerTest {
 
         DoctorDto doctorDto = new DoctorDto();
         doctorDto.setDoctorId(1);
+        doctorDto.setOpinions(Set.of());
 
         when(doctorService.findByEmail(userEmail)).thenReturn(doctorDto);
         when(doctorService.findDoctorById(doctorDto.getDoctorId())).thenReturn(doctorDto);
@@ -103,37 +112,28 @@ class DoctorControllerTest {
         // then
         assertEquals("DoctorUpcomingAppointments", modelAndView.getViewName());
     }
-
     @Test
-    @DisplayName("Should throw an exception when invalid doctorId is provided")
-    void showDoctorDetailsPageWhenInvalidDoctorIdIsProvidedThenThrowException() {
-        Integer invalidDoctorId = -1;
-        when(doctorService.findDoctorById(invalidDoctorId)).thenReturn(null);
-
-        String result = doctorController.showDoctorDetailsPage(invalidDoctorId, model);
-
-        verify(doctorService, times(1)).findDoctorById(invalidDoctorId);
-        verify(model, times(1)).addAttribute(eq("doctor"), isNull());
-        verify(model, times(1)).addAttribute(eq("dateFormatter"), any(DateTimeFormatter.class));
-        verify(model, times(1)).addAttribute(eq("polishDayFormatter"), any(DateTimeFormatter.class));
-        assertEquals("doctorDetails", result);
-    }
-
-    @Test
-    public void testShowSortedDoctorsPage() {
-        //given
+    void showDoctorDetailsPageTest() {
+        // given
         Integer doctorId = 1;
-        DoctorDto doctorDto = new DoctorDto();
+        // Mock doctor and opinions data
+        DoctorDto mockDoctor = new DoctorDto();
+        mockDoctor.setDoctorId(doctorId);
+        mockDoctor.setOpinions(Set.of());
+        when(doctorService.findDoctorById(doctorId)).thenReturn(mockDoctor);
 
-        when(doctorService.findDoctorById(doctorId)).thenReturn(doctorDto);
-
-        //when
+        // when
         String result = doctorController.showDoctorDetailsPage(doctorId, model);
 
-        //then
+        // then
+        verify(doctorService, times(1)).findDoctorById(doctorId);
+        verify(model, times(1)).addAttribute(eq("doctor"), eq(mockDoctor));
+        verify(model, times(1)).addAttribute(eq("format"), any());
+        verify(model, times(1)).addAttribute(eq("dateFormatter"), any());
+        verify(model, times(1)).addAttribute(eq("polishDayFormatter"), any());
         assertEquals("doctorDetails", result);
-        verify(model).addAttribute("doctor", doctorDto);
     }
+
 
     @Test
     void testGetUser() {
